# fake-healthcode

./: .dockerignore  .gitignore  .pdm.toml  Dockerfile  README.md  build.sh  fly.toml  healthcode.py  hefei.js  hz_green.json  pyproject.toml  run.sh  stop.sh
.mitmproxy/: mitmproxy-ca-cert.cer  mitmproxy-ca-cert.p12  mitmproxy-ca.p12  mitmproxy-ca.pem
example/: hefei.json  hz.json  hz_saveauthor_info.json  hz_scan.json
